# nexus-ai

./: .gitignore
backend/go/: go.mod  go.sum
backend/rust/: Cargo.toml
backend/rust/crates/nexus-core/: Cargo.toml
backend/rust/crates/nexus-core/src/: auth.rs  config.rs  error.rs  lib.rs
backend/rust/deploy/docker/: Dockerfile.agent-orchestrator  Dockerfile.memory-service  Dockerfile.rag-service  Dockerfile.security-ai  Dockerfile.vision-service
backend/rust/services/agent-orchestrator/: Cargo.toml
backend/rust/services/agent-orchestrator/src/: main.rs
backend/rust/services/memory-service/: Cargo.toml
backend/rust/services/memory-service/src/: main.rs
backend/rust/services/rag-service/: Cargo.toml
backend/rust/services/rag-service/src/: main.rs
backend/rust/services/security-ai/: Cargo.toml
backend/rust/services/security-ai/src/: main.rs
backend/rust/services/vision-service/: Cargo.toml
backend/rust/services/vision-service/src/: main.rs
docs/: ANALYSIS-gap-patterns-overengineering.md
docs/android/: 00-architecture-overview.md  01-project-structure.md  02-networking.md  03-authentication.md  04-ai-chat.md  05-dashboard.md  06-agent-management.md  07-knowledge-center.md  08-voice-assistant.md  09-notifications.md  10-offline-mode.md  11-security.md  13-state-management.md  14-navigation.md  15-ui-components.md  16-testing.md  17-performance.md  18-deployment.md  19-error-handling.md
docs/backend/: 00-api-gateway-service.md  01-architecture-overview.md  02-ddd-domain-design.md  03-ai-gateway-service.md  04-agent-orchestrator-service.md  (+28 more)
(+238 files in other folders)
