[package]
name = "security-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
nexus-core = { path = "../../crates/nexus-core" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
chrono.workspace = true
regex.workspace = true
